--- a/HalloAppClip/nl.lproj/Localizable.strings
+++ b/HalloAppClip/nl.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "home.update.notice.button.exit" = "Afsluiten";
 
 /* Text shown to users who have old versions of the app */
-"home.update.notice.text" = "Download de nieuwste versie van HalloApp alsjeblieft";
+"home.update.notice.text" = "Werk bij naar de nieuwste versie van HalloApp alsjeblieft";
 
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "Deze versie is verouderd";
