--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -1123,6 +1123,12 @@
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "این نسخه قدیمی است";
 
+/* Text shown to users who have old versions of the app */
+"home.update.warning.notice.text" = "لطفاً آخرین ورژن هالواپ را نصب کنید";
+
+/* Title of update notice shown to users who have old versions of the app */
+"home.update.warning.notice.title" = "این ورژن به زودی منقضی میشود";
+
 /* Text shown to users on video call failure. */
 "home.video.calls.fail.text" = "به زودی...";
 
