--- a/Notification Service Extension/pt-br.lproj/Localizable.strings
+++ b/Notification Service Extension/pt-br.lproj/Localizable.strings
@@ -247,3 +247,6 @@
 /* Row in Settings screen */
 "title.privacy" = "Privacidade";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Exportando…";
+
